# mandelbrot

./: CMakeLists.txt  README.md  main.cpp
src/: Mandelbrot.h
